Fix issues with data prep for display of complex hierarchies.

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_clientgroupingmatrix.htm
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_clientgroupingmatrix.htm
@@ -1648,7 +1648,7 @@
                                     }
                                     if (isNodeDuplicate == false) {
                                         nodelink.nodes.push({
-                                            id: uniqueOrgList[i].parentorganisationid, name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg'
+                                            id: result["accountid"], name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg'
                                         });
                                     }
                                     //
@@ -3520,7 +3520,7 @@
                                     }
                                     if (isNodeDuplicate == false) {
                                         nodelink.nodes.push({
-                                            id: uniqueOrgList[i].parentorganisationid, name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg'
+                                            id: result["accountid"], name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg'
                                         });
                                     }
                                     //
