--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -433,7 +433,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'islabel': true
                 },
                 {
-                    'label': 'Approve Decision to Proceed',
+                    'label': 'Approve Decision to Bid',
                     'action': function () {
                         Log("Approving bid decision");
                         parent.Arup.BidDicisionConfirmation();
