--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_close_Opportunity.htm
@@ -99,8 +99,7 @@
                 skipCloseOpportunity = true;
 
             if (skipCloseOpportunity) {
-                UpdateWonReason(select.options[select.selectedIndex].value);
-                closeDlg();
+                UpdateWonReason(select.options[select.selectedIndex].value);              
             } else {
                 var parameters = {};
 
@@ -152,7 +151,7 @@
                     if (this.readyState === 4) {
                         req.onreadystatechange = null;
                         if (this.status === 204) {
-                            window.close();
+                            closeDlg('UpdateFrameworkWon');
                         } else {
                             ArupAlert.alertDialog("Error updating Opportunity Status : " + this.statusText);
                         }
@@ -165,9 +164,10 @@
             }
         }
 
-        function closeDlg() {
+        function closeDlg(buttonEventName) {
             try {
                 window.close();
+                parent.buttonEvent = buttonEventName;
             } catch (e) {
             }
         }
@@ -287,7 +287,7 @@
             <textarea id="description" name="subject" style="height:60px"></textarea>
             <div align="right">
                 <input type="submit" value="Ok" onclick="closeOpportunity();">
-                <input type="submit" value="Cancel" onclick="closeDlg();">
+                <input type="submit" value="Cancel" onclick="closeDlg('Cancel');">
             </div>
         </form>
     </div>
