--- a/CrmPackage/WebResources/Web Page (HTML)/arup_clientgroupingmatrix.htm
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_clientgroupingmatrix.htm
@@ -926,7 +926,7 @@
 
             if (!isUserClick) {
                 nodelink.nodes.push({
-                    id: accName, name: accName, group: 1, rad: 10, imageUrl: 'arup_graphOrg'
+                    id: accName, name: accName, group: 1, rad: 10, imageUrl: 'arup_graphOrg', type : "account"
                 });
             }
 
@@ -934,7 +934,7 @@
 
                 if (!isUserClick) {
                     nodelink.nodes.push({
-                        id: uniqueOrgList[i].organizationid, name: uniqueOrgList[i].organizationname, group: 1, rad: 10, imageUrl: 'arup_graphOrg'
+                        id: uniqueOrgList[i].organizationid, name: uniqueOrgList[i].organizationname, group: 1, rad: 10, imageUrl: 'arup_graphOrg', type : "account"
                     });
                 }
             }
@@ -947,14 +947,15 @@
                         if (conData[i].contactid == activityList[j].parentcustomerid) {
                             hasActivitiesInLast6Months = 'Yes';
                             nodelink.nodes.push({
-                                id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, hasActivitiesInLast6Months: 'Yes'
+                                id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, hasActivitiesInLast6Months: 'Yes',
+                                type : "contact"
                             });
                             break;
                         }
                     }
                     if (hasActivitiesInLast6Months == 'No') {
                         nodelink.nodes.push({
-                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role
+                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, type : "contact"
                         });
                     }
                 }
@@ -963,7 +964,7 @@
                 for (var i = 0; i < conData.length; i++) {
                     if (!isUserClick) {
                         nodelink.nodes.push({
-                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role
+                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, type : "contact"
                         });
                     }
                 }
@@ -1007,7 +1008,7 @@
                                     }
                                     if (isNodeDuplicate == false) {
                                         nodelink.nodes.push({
-                                             id: result["accountid"], name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg'
+                                             id: result["accountid"], name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg', type : "account"
                                         });
                                     }
                                     //
@@ -1390,7 +1391,9 @@
                 .attr("clip-path", function (d, i) { return "url(#clipCircle_" + i + ")" })
                 .on("click", function (d) {
                     tooltip.style("visibility", "hidden");
-                    getDataforUser(d.userid, d.id)
+                    if (d.type === "contact") {
+                        getDataforUser(d.userid, d.id);
+                    }
                 })
                 .on("mouseover", function (d) {
                     connectedNodes(d);
@@ -1576,7 +1579,7 @@
 
                 if (!isUserClick) {
                     nodelink.nodes.push({
-                        id: uniqueOrgList[i].organizationid, name: uniqueOrgList[i].organizationname, group: 1, rad: 10, imageUrl: 'arup_graphOrg'
+                        id: uniqueOrgList[i].organizationid, name: uniqueOrgList[i].organizationname, group: 1, rad: 10, imageUrl: 'arup_graphOrg', type: "account"
                     });
                 }
             }
@@ -1588,14 +1591,15 @@
                         if (conData[i].contactid == activityList[j].parentcustomerid) {
                             hasActivitiesInLast6Months = 'Yes';
                             nodelink.nodes.push({
-                                id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, hasActivitiesInLast6Months: 'Yes'
+                                id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, hasActivitiesInLast6Months: 'Yes',
+                                type : "contact"
                             });
                             break;
                         }
                     }
                     if (hasActivitiesInLast6Months == 'No') {
                         nodelink.nodes.push({
-                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role
+                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, type: "contact"
                         });
                     }
                 }
@@ -1604,7 +1608,7 @@
                 for (var i = 0; i < conData.length; i++) {
                     if (!isUserClick) {
                         nodelink.nodes.push({
-                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role
+                            id: conData[i].contactid, name: conData[i].contactname, group: 1, rad: 10, imageUrl: Arup_GetClientURL() + conData[i].contactimage, role: conData[i].role, type: "contact"
                         });
                     }
                 }
@@ -1614,7 +1618,7 @@
             for (var i = 0; i < uniqueOrgList.length; i++) {
                 if (uniqueOrgList[i].parentorganisationid == "") {
                     if (!isUserClick)
-                        nodelink.links.push({ source: accName, target: uniqueOrgList[i].organizationid, value: 2 });
+                        nodelink.links.push({ source: accName, target: uniqueOrgList[i].organizationid, value: 2, type : "account" });
                 }
             }
             for (var i = 0; i < uniqueOrgList.length; i++) {
@@ -1648,7 +1652,7 @@
                                     }
                                     if (isNodeDuplicate == false) {
                                         nodelink.nodes.push({
-                                            id: result["accountid"], name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg'
+                                            id: result["accountid"], name: result["name"], group: 1, rad: 10, imageUrl: 'arup_graphOrg', type : "account"
                                         });
                                     }
                                     //
